compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__panic__plain.snap
---
source: compiler-core/src/erlang/tests/panic.rs
expression: "\npub fn main() {\n  panic\n}\n"
---
----- SOURCE CODE

pub fn main() {
  panic
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> any().
main() ->
    erlang:error(#{rakun_error => panic,
            message => <<"`panic` expression evaluated."/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 3}).
